--- a/src/main/webapp/help-m2.html
+++ b/src/main/webapp/help-m2.html
@@ -1,8 +1,8 @@
 <div>
-<p>Hudson understands <a href="http://pmd.sourceforge.net/cpd.html">PMD's
+<p>Jenkins understands <a href="http://pmd.sourceforge.net/cpd.html">PMD's
 Copy Paste Detector (CPD)</a> analysis report XML format. When this option
 is configured and your build runs the maven goal <code>pmd:cpd</code>
-then Hudson provides useful information about analysis results, such as
+then Jenkins provides useful information about analysis results, such as
 historical result trend, module and package statistics, web UI for
 viewing analysis reports and warnings, and so on.</p>
 <p>This plug-in is not invoked for failed builds, it is only called
