Update Japanese translation
Original commits are:

- 43f2dd2a0b7abe93dc46b5930c3d2342e645598e
- adf8513ecef11120c52e9573683f762e7176806e
- f51e18d64fdc09bc018b53447dcde9e16b2e35bc

--- a/src/main/webapp/help-m2_ja.html
+++ b/src/main/webapp/help-m2_ja.html
@@ -1,6 +1,6 @@
 <div>
   <p>
-    Hudsonは、<a href="http://pmd.sourceforge.net/cpd.html">PMD's Copy Paste Detector (CPD)</a> のXML形式で生成された分析レポートを認識します。
+    Jenkinsは、<a href="http://pmd.sourceforge.net/cpd.html">PMD's Copy Paste Detector (CPD)</a> のXML形式で生成された分析レポートを認識します。
     このオプションを設定し、ビルド実行時に、<code>pmd:cpd</code>ゴールが実行されれば、
     CPDの分析結果 - 実行結果の推移やパッケージ毎の数等々 - が様々な形式で参照できるようになります。
   </p>
