--- a/src/main/webapp/help_ja.html
+++ b/src/main/webapp/help_ja.html
@@ -1,10 +1,16 @@
 <div>
   <p>
-    Hudsonは、<a href="http://pmd.sourceforge.net/cpd.html">PMD's Copy Paste Detector (CPD)</a> のXML形式で生成された分析レポートを認識します。
-    このオプションを設定すると、CPDの分析結果 - 実行結果の推移やパッケージ毎の数等々 - が様々な形式で参照できるようになります。
+    Jenkinsは、以下の重複コード検出ツールから生成される分析レポートを認識します。
+  </p>
+  <ul>
+    <li><a href="http://pmd.sourceforge.net/cpd.html">PMD's Copy Paste Detector (CPD)</a></li>
+    <li><a href="http://www.harukizaemon.com/simian/">Simian</a></li>
+  </ul>
+  <p>
+    このオプションを設定すると、重複コード検出ツールの分析結果 - 実行結果の推移やパッケージ毎の数等々 - が様々な形式で参照できるようになります。
   </p>
   <p>
-    この機能を利用するには、ビルド時にCPDが実行されるよう設定する必要があります - このプラグイン自体は、実際の解析を行いません。
+    この機能を利用するには、ビルド時に重複コード検出ツールが実行されるよう設定する必要があります - このプラグイン自体は、実際の解析を行いません。
     このプラグインは、ビルドの失敗時には何もせず、 stableないしunstable(テストが失敗)のビルドにのみ動作します。
   </p>
 </div>
